# lets_cee

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  config.py  constants.py  engine.py  exceptions.py  main.py  models.py  request_context.py  schemas.py
backend/app/data/: demo_calendar.json  demo_emails.json
backend/app/data/cache/: automation.json  effectiveness.json  forecast.json  workflow.json
backend/app/routers/: activation.py  analysis.py  demo.py  ingestion.py  notifications.py  opportunities.py  status.py
backend/app/services/: activation_service.py  analysis_service.py  automation_service.py  calendar_service.py  cursor_service.py  dataset_service.py  demo_data.py  email_normaliser.py  fallback.py  heuristic_workflow_service.py  imap_service.py  inbox_watcher.py  ingestion_service.py  pattern_service.py  prototype_service.py  prototype_state.py  reply_service.py  scoring_service.py  session_service.py  workflow_service.py
backend/scripts/: verify-api.sh
backend/tests/: conftest.py  test_automation.py  test_calendar_service.py  test_config.py  test_demo_data.py  test_engine.py  test_ingestion.py  test_pattern_service.py  test_prototype.py  test_prototype_context.py  test_reply_service.py  test_scoring.py  test_session.py  test_watcher.py  test_workflow.py
docs/: BACKEND_DEPLOY.md  DEMO.md  QA_REPORT.md  TEAM_PROMPTS.md  architecture.md  (+1 more)
(+64 files in other folders)
