[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sloth-engine"
version = "0.1.0"
description = "Sloth.ai AI/scoring engine — workflow detection, automation proposals, and effectiveness scoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sloth.ai Team" }]
dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "openai>=1.40,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
sloth-engine = "app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
